chore: use google-java-format for dhis2-core DHIS2-15518 (#14479)
* chore: use google formatter

* chore: format code using google formatter