@@ -32,10 +32,10 @@ import static org.hamcrest.Matchers.hasSize;
 import static org.hamcrest.Matchers.is;
 import static org.mockito.Mockito.when;
 
+import com.google.common.collect.Lists;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
-
 import org.hisp.dhis.DhisConvenienceTest;
 import org.hisp.dhis.attribute.Attribute;
 import org.hisp.dhis.attribute.AttributeValue;
@@ -58,194 +58,184 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import com.google.common.collect.Lists;
-
 /**
  * @author Enrico Colasante
  */
-@ExtendWith( MockitoExtension.class )
-class UniqueAttributeSupplierTest extends DhisConvenienceTest
-{
+@ExtendWith(MockitoExtension.class)
+class UniqueAttributeSupplierTest extends DhisConvenienceTest {
 
-    private static final String UNIQUE_VALUE = "unique value";
+  private static final String UNIQUE_VALUE = "unique value";
 
-    private static final String TEI_UID = "TEI UID";
+  private static final String TEI_UID = "TEI UID";
 
-    private static final String ANOTHER_TEI_UID = "ANOTHER_TEI_UID";
+  private static final String ANOTHER_TEI_UID = "ANOTHER_TEI_UID";
 
-    @InjectMocks
-    private UniqueAttributesSupplier supplier;
+  @InjectMocks private UniqueAttributesSupplier supplier;
 
-    @Mock
-    private TrackedEntityAttributeService trackedEntityAttributeService;
+  @Mock private TrackedEntityAttributeService trackedEntityAttributeService;
 
-    @Mock
-    private TrackedEntityAttributeValueService trackedEntityAttributeValueService;
+  @Mock private TrackedEntityAttributeValueService trackedEntityAttributeValueService;
 
-    private TrackerImportParams params;
+  private TrackerImportParams params;
 
-    private TrackerPreheat preheat;
+  private TrackerPreheat preheat;
 
-    private TrackedEntityAttribute uniqueAttribute;
+  private TrackedEntityAttribute uniqueAttribute;
 
-    private TrackedEntity tei;
+  private TrackedEntity tei;
 
-    private Enrollment enrollment;
+  private Enrollment enrollment;
 
-    private TrackedEntityAttributeValue trackedEntityAttributeValue;
+  private TrackedEntityAttributeValue trackedEntityAttributeValue;
 
-    @BeforeEach
-    public void setUp()
-    {
-        params = TrackerImportParams.builder().build();
-        preheat = new TrackerPreheat();
-        uniqueAttribute = createTrackedEntityAttribute( 'A', ValueType.TEXT );
-        OrganisationUnit orgUnit = createOrganisationUnit( 'A' );
-        Program program = createProgram( 'A' );
-        Attribute attribute = createAttribute( 'A' );
-        AttributeValue attributeValue = createAttributeValue( attribute, UNIQUE_VALUE );
-        tei = createTrackedEntity( 'A', orgUnit );
-        tei.setUid( TEI_UID );
-        tei.setAttributeValues( Collections.singleton( attributeValue ) );
-        enrollment = createEnrollment( program, tei, orgUnit );
-        enrollment.setAttributeValues( Collections.singleton( attributeValue ) );
-        trackedEntityAttributeValue = createTrackedEntityAttributeValue( 'A', tei, uniqueAttribute );
-    }
+  @BeforeEach
+  public void setUp() {
+    params = TrackerImportParams.builder().build();
+    preheat = new TrackerPreheat();
+    uniqueAttribute = createTrackedEntityAttribute('A', ValueType.TEXT);
+    OrganisationUnit orgUnit = createOrganisationUnit('A');
+    Program program = createProgram('A');
+    Attribute attribute = createAttribute('A');
+    AttributeValue attributeValue = createAttributeValue(attribute, UNIQUE_VALUE);
+    tei = createTrackedEntity('A', orgUnit);
+    tei.setUid(TEI_UID);
+    tei.setAttributeValues(Collections.singleton(attributeValue));
+    enrollment = createEnrollment(program, tei, orgUnit);
+    enrollment.setAttributeValues(Collections.singleton(attributeValue));
+    trackedEntityAttributeValue = createTrackedEntityAttributeValue('A', tei, uniqueAttribute);
+  }
 
-    @Test
-    void verifySupplierWhenNoUniqueAttributeIsPresentInTheSystem()
-    {
-        when( trackedEntityAttributeService.getAllUniqueTrackedEntityAttributes() )
-            .thenReturn( Collections.emptyList() );
+  @Test
+  void verifySupplierWhenNoUniqueAttributeIsPresentInTheSystem() {
+    when(trackedEntityAttributeService.getAllUniqueTrackedEntityAttributes())
+        .thenReturn(Collections.emptyList());
 
-        this.supplier.preheatAdd( params, preheat );
+    this.supplier.preheatAdd(params, preheat);
 
-        assertThat( preheat.getUniqueAttributeValues(), hasSize( 0 ) );
-    }
+    assertThat(preheat.getUniqueAttributeValues(), hasSize(0));
+  }
 
-    @Test
-    void verifySupplierWhenTEIAndEnrollmentHaveTheSameUniqueAttribute()
-    {
-        when( trackedEntityAttributeService.getAllUniqueTrackedEntityAttributes() )
-            .thenReturn( Collections.singletonList( uniqueAttribute ) );
-        TrackerImportParams importParams = TrackerImportParams.builder()
-            .trackedEntities( Collections.singletonList( trackedEntity() ) )
-            .enrollments( Collections.singletonList( enrollment( TEI_UID ) ) )
+  @Test
+  void verifySupplierWhenTEIAndEnrollmentHaveTheSameUniqueAttribute() {
+    when(trackedEntityAttributeService.getAllUniqueTrackedEntityAttributes())
+        .thenReturn(Collections.singletonList(uniqueAttribute));
+    TrackerImportParams importParams =
+        TrackerImportParams.builder()
+            .trackedEntities(Collections.singletonList(trackedEntity()))
+            .enrollments(Collections.singletonList(enrollment(TEI_UID)))
             .build();
 
-        this.supplier.preheatAdd( importParams, preheat );
+    this.supplier.preheatAdd(importParams, preheat);
 
-        assertThat( preheat.getUniqueAttributeValues(), hasSize( 0 ) );
-    }
+    assertThat(preheat.getUniqueAttributeValues(), hasSize(0));
+  }
 
-    @Test
-    void verifySupplierWhenTwoTEIsHaveAttributeWithSameUniqueValue()
-    {
-        when( trackedEntityAttributeService.getAllUniqueTrackedEntityAttributes() )
-            .thenReturn( Collections.singletonList( uniqueAttribute ) );
-        TrackerImportParams importParams = TrackerImportParams.builder()
-            .trackedEntities( sameUniqueAttributeTrackedEntities() )
+  @Test
+  void verifySupplierWhenTwoTEIsHaveAttributeWithSameUniqueValue() {
+    when(trackedEntityAttributeService.getAllUniqueTrackedEntityAttributes())
+        .thenReturn(Collections.singletonList(uniqueAttribute));
+    TrackerImportParams importParams =
+        TrackerImportParams.builder().trackedEntities(sameUniqueAttributeTrackedEntities()).build();
+
+    this.supplier.preheatAdd(importParams, preheat);
+
+    assertThat(preheat.getUniqueAttributeValues(), hasSize(2));
+  }
+
+  @Test
+  void verifySupplierWhenTEIAndEnrollmentFromAnotherTEIHaveAttributeWithSameUniqueValue() {
+    when(trackedEntityAttributeService.getAllUniqueTrackedEntityAttributes())
+        .thenReturn(Collections.singletonList(uniqueAttribute));
+    TrackerImportParams importParams =
+        TrackerImportParams.builder()
+            .trackedEntities(Collections.singletonList(trackedEntity()))
+            .enrollments(Collections.singletonList(enrollment(ANOTHER_TEI_UID)))
             .build();
 
-        this.supplier.preheatAdd( importParams, preheat );
+    this.supplier.preheatAdd(importParams, preheat);
 
-        assertThat( preheat.getUniqueAttributeValues(), hasSize( 2 ) );
-    }
+    assertThat(preheat.getUniqueAttributeValues(), hasSize(2));
+  }
 
-    @Test
-    void verifySupplierWhenTEIAndEnrollmentFromAnotherTEIHaveAttributeWithSameUniqueValue()
-    {
-        when( trackedEntityAttributeService.getAllUniqueTrackedEntityAttributes() )
-            .thenReturn( Collections.singletonList( uniqueAttribute ) );
-        TrackerImportParams importParams = TrackerImportParams.builder()
-            .trackedEntities( Collections.singletonList( trackedEntity() ) )
-            .enrollments( Collections.singletonList( enrollment( ANOTHER_TEI_UID ) ) )
+  @Test
+  void verifySupplierWhenTEIinPayloadAndDBHaveTheSameUniqueAttribute() {
+    when(trackedEntityAttributeService.getAllUniqueTrackedEntityAttributes())
+        .thenReturn(Collections.singletonList(uniqueAttribute));
+    Map<TrackedEntityAttribute, List<String>> trackedEntityAttributeListMap =
+        Map.of(uniqueAttribute, List.of(UNIQUE_VALUE));
+    List<TrackedEntityAttributeValue> attributeValues = List.of(trackedEntityAttributeValue);
+    when(trackedEntityAttributeValueService.getUniqueAttributeByValues(
+            trackedEntityAttributeListMap))
+        .thenReturn(attributeValues);
+    TrackerImportParams importParams =
+        TrackerImportParams.builder()
+            .trackedEntities(Collections.singletonList(trackedEntity()))
             .build();
 
-        this.supplier.preheatAdd( importParams, preheat );
+    this.supplier.preheatAdd(importParams, preheat);
 
-        assertThat( preheat.getUniqueAttributeValues(), hasSize( 2 ) );
-    }
+    assertThat(preheat.getUniqueAttributeValues(), hasSize(1));
+  }
 
-    @Test
-    void verifySupplierWhenTEIinPayloadAndDBHaveTheSameUniqueAttribute()
-    {
-        when( trackedEntityAttributeService.getAllUniqueTrackedEntityAttributes() )
-            .thenReturn( Collections.singletonList( uniqueAttribute ) );
-        Map<TrackedEntityAttribute, List<String>> trackedEntityAttributeListMap = Map.of( uniqueAttribute,
-            List.of( UNIQUE_VALUE ) );
-        List<TrackedEntityAttributeValue> attributeValues = List.of( trackedEntityAttributeValue );
-        when( trackedEntityAttributeValueService.getUniqueAttributeByValues( trackedEntityAttributeListMap ) )
-            .thenReturn( attributeValues );
-        TrackerImportParams importParams = TrackerImportParams.builder()
-            .trackedEntities( Collections.singletonList( trackedEntity() ) )
+  @Test
+  void verifySupplierWhenTEIinPayloadAndAnotherTEIInDBHaveTheSameUniqueAttribute() {
+    when(trackedEntityAttributeService.getAllUniqueTrackedEntityAttributes())
+        .thenReturn(Collections.singletonList(uniqueAttribute));
+    Map<TrackedEntityAttribute, List<String>> trackedEntityAttributeListMap =
+        Map.of(uniqueAttribute, List.of(UNIQUE_VALUE));
+    List<TrackedEntityAttributeValue> attributeValues = List.of(trackedEntityAttributeValue);
+    when(trackedEntityAttributeValueService.getUniqueAttributeByValues(
+            trackedEntityAttributeListMap))
+        .thenReturn(attributeValues);
+    TrackerImportParams importParams =
+        TrackerImportParams.builder()
+            .trackedEntities(Collections.singletonList(anotherTrackedEntity()))
             .build();
 
-        this.supplier.preheatAdd( importParams, preheat );
+    this.supplier.preheatAdd(importParams, preheat);
 
-        assertThat( preheat.getUniqueAttributeValues(), hasSize( 1 ) );
-    }
+    assertThat(preheat.getUniqueAttributeValues(), hasSize(1));
+    assertThat(preheat.getUniqueAttributeValues().get(0).getTeiUid(), is(TEI_UID));
+  }
 
-    @Test
-    void verifySupplierWhenTEIinPayloadAndAnotherTEIInDBHaveTheSameUniqueAttribute()
-    {
-        when( trackedEntityAttributeService.getAllUniqueTrackedEntityAttributes() )
-            .thenReturn( Collections.singletonList( uniqueAttribute ) );
-        Map<TrackedEntityAttribute, List<String>> trackedEntityAttributeListMap = Map.of( uniqueAttribute,
-            List.of( UNIQUE_VALUE ) );
-        List<TrackedEntityAttributeValue> attributeValues = List.of( trackedEntityAttributeValue );
-        when( trackedEntityAttributeValueService.getUniqueAttributeByValues( trackedEntityAttributeListMap ) )
-            .thenReturn( attributeValues );
-        TrackerImportParams importParams = TrackerImportParams.builder()
-            .trackedEntities( Collections.singletonList( anotherTrackedEntity() ) )
-            .build();
+  private List<org.hisp.dhis.tracker.imports.domain.TrackedEntity>
+      sameUniqueAttributeTrackedEntities() {
+    return Lists.newArrayList(
+        trackedEntity(),
+        org.hisp.dhis.tracker.imports.domain.TrackedEntity.builder()
+            .trackedEntity(ANOTHER_TEI_UID)
+            .attributes(Collections.singletonList(uniqueAttribute()))
+            .build());
+  }
 
-        this.supplier.preheatAdd( importParams, preheat );
+  private org.hisp.dhis.tracker.imports.domain.TrackedEntity trackedEntity() {
 
-        assertThat( preheat.getUniqueAttributeValues(), hasSize( 1 ) );
-        assertThat( preheat.getUniqueAttributeValues().get( 0 ).getTeiUid(), is( TEI_UID ) );
-    }
+    return org.hisp.dhis.tracker.imports.domain.TrackedEntity.builder()
+        .trackedEntity(TEI_UID)
+        .attributes(Collections.singletonList(uniqueAttribute()))
+        .build();
+  }
 
-    private List<org.hisp.dhis.tracker.imports.domain.TrackedEntity> sameUniqueAttributeTrackedEntities()
-    {
-        return Lists.newArrayList( trackedEntity(),
-            org.hisp.dhis.tracker.imports.domain.TrackedEntity.builder()
-                .trackedEntity( ANOTHER_TEI_UID )
-                .attributes( Collections.singletonList( uniqueAttribute() ) ).build() );
-    }
+  private org.hisp.dhis.tracker.imports.domain.TrackedEntity anotherTrackedEntity() {
 
-    private org.hisp.dhis.tracker.imports.domain.TrackedEntity trackedEntity()
-    {
+    return org.hisp.dhis.tracker.imports.domain.TrackedEntity.builder()
+        .trackedEntity(ANOTHER_TEI_UID)
+        .attributes(Collections.singletonList(uniqueAttribute()))
+        .build();
+  }
 
-        return org.hisp.dhis.tracker.imports.domain.TrackedEntity.builder()
-            .trackedEntity( TEI_UID )
-            .attributes( Collections.singletonList( uniqueAttribute() ) )
-            .build();
-    }
+  private org.hisp.dhis.tracker.imports.domain.Enrollment enrollment(String teiUid) {
+    return org.hisp.dhis.tracker.imports.domain.Enrollment.builder()
+        .trackedEntity(teiUid)
+        .enrollment("ENROLLMENT")
+        .attributes(Collections.singletonList(uniqueAttribute()))
+        .build();
+  }
 
-    private org.hisp.dhis.tracker.imports.domain.TrackedEntity anotherTrackedEntity()
-    {
-
-        return org.hisp.dhis.tracker.imports.domain.TrackedEntity.builder()
-            .trackedEntity( ANOTHER_TEI_UID )
-            .attributes( Collections.singletonList( uniqueAttribute() ) )
-            .build();
-    }
-
-    private org.hisp.dhis.tracker.imports.domain.Enrollment enrollment( String teiUid )
-    {
-        return org.hisp.dhis.tracker.imports.domain.Enrollment.builder()
-            .trackedEntity( teiUid )
-            .enrollment( "ENROLLMENT" )
-            .attributes( Collections.singletonList( uniqueAttribute() ) )
-            .build();
-    }
-
-    private org.hisp.dhis.tracker.imports.domain.Attribute uniqueAttribute()
-    {
-        return org.hisp.dhis.tracker.imports.domain.Attribute.builder()
-            .attribute( MetadataIdentifier.ofUid( this.uniqueAttribute ) )
-            .value( UNIQUE_VALUE )
-            .build();
-    }
+  private org.hisp.dhis.tracker.imports.domain.Attribute uniqueAttribute() {
+    return org.hisp.dhis.tracker.imports.domain.Attribute.builder()
+        .attribute(MetadataIdentifier.ofUid(this.uniqueAttribute))
+        .value(UNIQUE_VALUE)
+        .build();
+  }
 }
